--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -49,8 +49,8 @@ command_line/extra_args=""
 version/code=1
 version/name="1.0"
 package/unique_name="org.godotengine.$genname"
-package/name=""
-package/signed=false
+package/name="MathGame"
+package/signed=true
 screen/immersive_mode=true
 screen/orientation=0
 screen/support_small=true
@@ -58,7 +58,7 @@ screen/support_normal=true
 screen/support_large=true
 screen/support_xlarge=true
 screen/opengl_debug=false
-launcher_icons/main_192x192=""
+launcher_icons/main_192x192="res://assets/playerShip1_blue.png"
 launcher_icons/adaptive_foreground_432x432=""
 launcher_icons/adaptive_background_432x432=""
 keystore/debug=""
