--- a/godot_project/export_presets_ci.cfg
+++ b/godot_project/export_presets_ci.cfg
@@ -50,8 +50,8 @@ application/info=""
 application/icon=""
 application/identifier=""
 application/signature=""
-application/short_version="%%"
-application/version="%%"
+application/short_version="%%build_number%%"
+application/version="%%version%%"
 application/copyright="© %%year%% Caleb Vincent"
 display/high_res=true
 texture_format/s3tc=true
@@ -513,51 +513,55 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.6.options]
 
-graphics/32_bits_framebuffer=true
-xr_features/xr_mode=0
-xr_features/degrees_of_freedom=0
-xr_features/hand_tracking=0
-xr_features/focus_awareness=false
-one_click_deploy/clear_previous_install=false
 custom_template/debug=""
 custom_template/release=""
 custom_template/use_custom_build=true
 custom_template/export_format=1
-command_line/extra_args=""
-version/code=%%build_number%%
-version/name="%%version%%"
-package/unique_name="io.calebvincent.$genname"
-package/name="SpaceMath"
-package/signed=false
-screen/immersive_mode=true
-screen/orientation=0
-screen/support_small=true
-screen/support_normal=true
-screen/support_large=true
-screen/support_xlarge=true
-screen/opengl_debug=false
-launcher_icons/main_192x192="res://icon.svg"
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
+architectures/armeabi-v7a=true
+architectures/arm64-v8a=true
+architectures/x86=false
+architectures/x86_64=false
 keystore/debug=""
 keystore/debug_user=""
 keystore/debug_password=""
 keystore/release=""
 keystore/release_user=""
 keystore/release_password=""
+one_click_deploy/clear_previous_install=false
+version/code=%%build_number%%
+version/name="%%version%%"
+version/min_sdk=19
+version/target_sdk=30
+package/unique_name="io.calebvincent.$genname"
+package/name="SpaceMath"
+package/signed=true
+package/classify_as_game=true
+package/retain_data_on_uninstall=false
+package/exclude_from_recents=false
+launcher_icons/main_192x192="res://icon.svg"
+launcher_icons/adaptive_foreground_432x432=""
+launcher_icons/adaptive_background_432x432=""
+graphics/32_bits_framebuffer=true
+graphics/opengl_debug=false
+xr_features/xr_mode=0
+xr_features/hand_tracking=0
+xr_features/hand_tracking_frequency=0
+xr_features/passthrough=0
+screen/immersive_mode=true
+screen/support_small=true
+screen/support_normal=true
+screen/support_large=true
+screen/support_xlarge=true
+user_data_backup/allow=false
+command_line/extra_args=""
 apk_expansion/enable=false
 apk_expansion/SALT=""
 apk_expansion/public_key=""
-architectures/armeabi-v7a=true
-architectures/arm64-v8a=true
-architectures/x86=false
-architectures/x86_64=false
 permissions/custom_permissions=PoolStringArray(  )
 permissions/access_checkin_properties=false
 permissions/access_coarse_location=false
@@ -705,3 +709,4 @@ permissions/write_social_stream=false
 permissions/write_sync_settings=false
 permissions/write_user_dictionary=false
 
+https://gitlab.com/caleb-vincent/test/-/tags?feed_token=NMbLUDc3its6jw1sDeET&format=atom
